WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283678
Non-unified build fixes, end of November 2024 edition
https://bugs.webkit.org/show_bug.cgi?id=283678
Summary
Non-unified build fixes, end of November 2024 edition
Adrian Perez
Reported
2024-11-25 06:23:14 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-11-25 06:29:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37129
EWS
Comment 2
2024-11-26 01:33:38 PST
Committed
287089@main
(2f893c682c49): <
https://commits.webkit.org/287089@main
> Reviewed commits have been landed. Closing PR #37129 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-26 01:34:15 PST
<
rdar://problem/140574613
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug