Non-unified build fixes, end of November 2024 edition https://bugs.webkit.org/show_bug.cgi?id=283678

Unreviewed non-unified build fixes.

* Source/WebCore/dom/CaretPosition.cpp: Add missing SimpleRange.h header
  inclusion.
* Source/WebCore/platform/graphics/ImageBufferBackend.cpp: Add missing
  ImageBuffer.h header inclusion, remove inclusion of Image.h that is
  now unneeded.

Canonical link: https://commits.webkit.org/287089@main